presenter display: fix notes view on Firefox
Gecko doesn't seem to infer the reduced margin the same way WebKit
does, but explicitly stating the -50% margin works correctly on both
browsers.

Fixes https://github.com/schacon/showoff/issues/167.

--- a/public/css/presenter.css
+++ b/public/css/presenter.css
@@ -2,6 +2,7 @@ div.zoomed {
   zoom: 50%;
   -moz-transform: scale(0.5);
   -moz-transform-origin: 0 0;
+  margin-bottom: -50%;
 }
 
 #preso { margin-top: 20px; }
